--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -45,9 +45,9 @@ html[xmlns] .slides {display: block;}
 	box-shadow: 2px 2px 0px rgba(0,0,0,.2); 
 }
 
-.home-slider {
+/*.home-slider {
 	width: 620px;	
-}
+}*/
 
 .flexslider .slides {zoom: 1;}
 .flexslider .slides > li {position: relative;}
@@ -80,10 +80,9 @@ html[xmlns] .slides {display: block;}
 
 .flex-direction-nav{
 	position: absolute;
-	top: 38%;
+	top: 50%;
 	right: -21px;
 }
-
 
 .flex-direction-nav li a {
 	width: 38px; 
