上傳首頁檔案
測試

--- a/css/skin.css
+++ b/css/skin.css
@@ -171,9 +171,9 @@ article .meta{
 /* FOOTER ------------------------------------------------------------*/
 
 
-/*footer .wrapper{
+footer .wrapper{
 	background: url(../img/footer.png) repeat-x top center;
-}*/
+}
 
 .footer-bottom{
 	border-top: 1px solid #ccc;
