--- a/css/style.css
+++ b/css/style.css
@@ -634,7 +634,7 @@ nav a{
 .related-projects{
 	display: block;
 	width: 940px;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	/*border-top: 1px solid rgba(0, 0, 0, 0.1);*/
 	padding: 24px 0px 50px 0px;
 }
 
